--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       This project was coded by
       <a href="https://github.com/florencia-persichini" target="_blank">Florencia Persichini</a>
       and is
-      <a href="X" target="_blank"> open-sourced on GitHub</a>
+      <a href="http://github.com/florencia-persichini/clocks" target="_blank"> open-sourced on GitHub</a>
       and
-      <a href="X" target="_blank">hosted on Netlify</a>
+      <a href="https://random-clocks.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
 
     <script src="javascript/index.js"></script>
