Add project's basic HTML structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,36 @@
     <title>World Clock</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <header>
+      <h1>World Clock</h1>
+      <select name="" id="">
+        <option>Select a city</option>
+        <option>Barcelona</option>
+        <option>Buenos Aires</option>
+        <option>Miami</option>
+        <option>Paris</option>
+      </select>
+    </header>
+
+    <main>
+      <div class="city-card">
+        <div class="date">
+          <div class="date-number">15</div>
+          <div class="date-month">SEP</div>
+        </div>
+        <div class="city-name">Barcelona</div>
+        <div class="time">20:30 H.</div>
+      </div>
+
+      <div class="city-card">
+        <div class="date">
+          <div class="date-number">15</div>
+          <div class="date-month">SEP</div>
+        </div>
+        <div class="city-name">Buenos Aires</div>
+        <div class="time">20:30 H.</div>
+      </div>
+    </main>
 
     <footer>
       This project was coded by
