Add CSS to time cards on main section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="date-month">SEP</div>
           </div>
           <div class="city-name">Barcelona</div>
-          <div class="time">20:30 H.</div>
+          <div class="time">20:30</div>
         </div>
 
         <div class="city-card">
@@ -40,7 +40,7 @@
             <div class="date-month">SEP</div>
           </div>
           <div class="city-name">Buenos Aires</div>
-          <div class="time">20:30 H.</div>
+          <div class="time">20:30</div>
         </div>
       </main>
 
