Add JavaScript for select dropdown menu functionality using moment.js and moment timezone

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>World Clock</title>
   </head>
@@ -14,33 +16,41 @@
       <header>
         <div class="header-container">
           <h1>World Clock</h1>
-          <select name="" id="">
+          <select id="city-selector">
             <option>Select a city</option>
-            <option>Barcelona</option>
-            <option>Buenos Aires</option>
-            <option>Miami</option>
-            <option>Paris</option>
+            <option value="America/Toronto">Toronto</option>
+            <option value="America/New_York">New York</option>
+            <option value="America/Sao_Paulo">Sao Paulo</option>
+            <option value="Europe/Madrid">Madrid</option>
+            <option value="Europe/Paris">Paris</option>
+            <option value="Asia/Tel_Aviv">Tel Aviv</option>
+            <option value="Asia/Tokyo">Tokyo</option>
+            <option value="Australia/Sydney">Sydney</option>
+            <option value="Europe/Moscow">Moscow</option>
+            <option value="America/Argentina/Buenos_Aires">Buenos Aires</option>
           </select>
         </div>
       </header>
 
       <main>
-        <div class="city-card">
-          <div class="date">
-            <div class="date-number">15</div>
-            <div class="date-month">SEP</div>
+        <div id="cities">
+          <div class="city-container" id="madrid">
+            <div class="date">
+              <div class="date-number"></div>
+              <div class="date-month"></div>
+            </div>
+            <div class="city-name">Madrid</div>
+            <div class="time"></div>
           </div>
-          <div class="city-name">Barcelona</div>
-          <div class="time">20:30</div>
-        </div>
 
-        <div class="city-card">
-          <div class="date">
-            <div class="date-number">15</div>
-            <div class="date-month">SEP</div>
+          <div class="city-container" id="buenos-aires">
+            <div class="date">
+              <div class="date-number"></div>
+              <div class="date-month"></div>
+            </div>
+            <div class="city-name">Buenos Aires</div>
+            <div class="time"></div>
           </div>
-          <div class="city-name">Buenos Aires</div>
-          <div class="time">20:30</div>
         </div>
       </main>
 
