--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <h1>World Clock</h1>
           <select id="city-selector">
             <option>Select a city</option>
+            <option value="current">Current Location</option>
             <option value="America/Toronto">Toronto</option>
             <option value="America/New_York">New York</option>
             <option value="America/Sao_Paulo">Sao Paulo</option>
